# ugress_thesis_simualtion

./: .gitignore  CHANGELOG.md  CITATION.cff  FINAL_SUMMARY.md  README.md
data/: README.md  path_data_20251206_155237.csv  route_circle_20251208_235753.csv  route_spiral_20251208_235520.csv  route_square_20251208_235151.csv  route_zigzag_20251208_235317.csv  simple_path_20251206_160100.csv  simple_path_20251206_160215.csv  simulation_run_20251208_172737.csv  simulation_run_20251208_175645.csv  simulation_run_20251208_233820.csv
docs/: SETUP_GUIDE.md  SIMULATION_RESULTS.md  THESIS_CHAPTER_8.md
figures/: README.md
results/: performance_summary.txt
scripts/: analyze_simple_results.py
ugress_sim/: CMakeLists.txt  package.xml
ugress_sim/launch/: spawn_robot.launch
ugress_sim/scripts/: ROUTES_README.md  follow_path.py  follow_path_final.py  follow_path_simple.py  route_circle.py  route_spiral.py  route_square.py  route_zigzag.py  select_route.py
ugress_sim/urdf/: ugress.urdf
videos/: README.md
