<?xml version="1.0"?>
<package format="2">
  <name>ugress_sim</name>
  <version>3.0.0</version>
  <description>
    UGRESS - Autonomous Ground-based Weed Elimination Robot Simulation
    Gazebo simulation for differential drive agricultural robot with multiple route patterns.
    Developed for Master's thesis validation.
  </description>

  <maintainer email="abdirahman.hassan@nmbu.no">Abdirahman Hassan</maintainer>
  <author email="abdirahman.hassan@nmbu.no">Abdirahman Hassan</author>

  <license>MIT</license>

  <url type="website">https://github.com/AbdirahmanhassanM/ugress_thesis_simualtion</url>
  <url type="repository">https://github.com/AbdirahmanhassanM/ugress_thesis_simualtion</url>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}"/>
  </export>

</package>